# Llama2

./: pyproject.toml  requirements.txt
data/vectorstore/temp-index/: index.faiss  index.pkl
src/apps/: contextAware_localLLM.py  contextAware_localLLM_withRAG.py  localLLM-memory.py  localLLM.py  localLLM_cmtPrompt.py  localLLM_withDocsQA.py  localLLM_withRAG.py
src/utils/: contextAware_conversation_utils.py  conversation_utils.py  doc_to_embeddings.py  load_data.py  model_utils.py
