[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Llama2Apps"
version = "0.0.1"
description = "Custom Inhouse generativeAI solution based on Llama2"
readme = "README.md"
authors = [{ name = "Amit Jha", 
email = "amitj1jan@gmail.com" }]
license = { file = "LICENSE" }
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["GenerativeAI", 
      "Llama2", 
      "RAG"]
 
dependencies = [ "llama_index", "chanlit", "llama_index", "torch",
		"transformers"]
 
requires-python = ">=3.8"
